moved prompts to separate files add pre-process step to LLM pipeline to remove unnecessary marks

--- a/experiments/lexical_articles.ipynb
+++ b/experiments/lexical_articles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,7 @@
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -35,7 +36,9 @@
     "\n",
     "openai_llm = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=os.getenv(\"OPENAI_API_KEY\"))  # gpt-4-turbo - more correct grammar info\n",
     "\n",
-    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings')\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "sys.path.append(project_root)\n",
+    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', '..core.settings')\n",
     "django.setup()\n"
    ]
   },
@@ -56,18 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "List u ovom kontekstu označava tanak i ravno izdužen predmet. U ovim rečenicama, reč \"list\" se odnosi na tanak komad papira koji se koristi za pisanje ili beleške. U ovom slučaju, \"list\" je jedna od osnovnih stvari koje se koriste u svakodnevnom životu.\n",
+       "Reč \"list\" u ovom kontekstu se odnosi na tanku ravnu površinu koja je obično deo drveta ili papira. U ovom slučaju, reč \"list\" se koristi kako bi se opisala površina drveta ili papira koja je pala na zemlju ili bila na stolu. U srpskom jeziku, reč \"list\" može imati različita značenja u zavisnosti od konteksta, kao što su deo drveta, deo papira ili nešto što je tanko i ravno.\n",
        "\n",
-       "Example sentences:\n",
-       "- Na stolu su stajali listovi knjige koje je trebalo pročitati.\n",
-       "- Olovka je pala na list papira koji je bio pun crteža."
+       "Examples:\n",
+       "- Našla sam suv list na stazi u šumi.\n",
+       "- Na stolu je bio list sa receptom za kolače."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -87,11 +90,11 @@
     {
      "data": {
       "text/html": [
-       "[In this sentence, the word \"list\" refers to a piece of paper. It is used as a noun and denotes a physical paper with writing on it. In this context, \"list\" is specifically referring to a sheet of paper.]\n",
+       "In this sentence, the word \"list\" refers to a sheet of paper. It is used as a noun and indicates a physical piece of paper. In this context, \"list\" specifically refers to a sheet of paper with important notes written on it.\n",
        "\n",
        "Example sentences in Serbian:\n",
-       "- Na stolu su bili listovi sa receptima.\n",
-       "- Napisala je pismo na jednom listu hartije."
+       "- Na stolu je bio list sa pesmama koje je napisala.\n",
+       "- Molim te, donesi mi list sa informacijama o tom događaju."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -111,11 +114,13 @@
     {
      "data": {
       "text/html": [
-       "The word \"intima pande\" in this sentence means \"reveal intimate details.\" Here, it is used as a phrase to indicate the action of disclosing personal or private information. It is a command or request to share confidential or close details.\n",
+       "In this sentence, the word \"intima pande\" is used to convey the idea of revealing or disclosing intimate or private matters. It is used as a command or request to share personal information or secrets. \n",
+       "\n",
+       "This phrase is in Latin and is used in a poetic context, often found in classical literature. It is not a common everyday expression but rather a formal and literary way of asking someone to open up about personal or confidential topics.\n",
        "\n",
        "Example sentences in Serbian:\n",
-       "- Molim te, neka mi intima pande o svojoj prošlosti.\n",
-       "- Nemoj mu previše intima pande, možda to ne želi da deli."
+       "- Molim te, podeli sa mnom svoje najintimnije misli.\n",
+       "- Otkrij mi svoje tajne, neka intima pande."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -135,11 +140,11 @@
     {
      "data": {
       "text/html": [
-       "In this sentence, \"Deus\" refers to a literary or artistic device where a seemingly unsolvable problem is suddenly and abruptly resolved by an unexpected power, event, or character. It is a Latin term meaning \"god from the machine.\" This term is often used to describe an improbable or contrived solution that appears out of nowhere to resolve a complex situation.\n",
+       "In this sentence, the word \"Deus\" refers to a god or deity. It is used in the context of \"Deus ex machina,\" a Latin phrase that translates to \"god from the machine.\" This phrase is often used to describe a plot device where a seemingly unsolvable problem is suddenly and abruptly resolved by an unexpected intervention. It is a literary or theatrical technique where a god or some external force is introduced to resolve the conflict in a story.\n",
        "\n",
        "Example sentences in Serbian:\n",
-       "1. Kraj romana je bio razočaravajuć jer je autor koristio \"Deus ex machina\" kako bi rešio sve probleme likova.\n",
-       "2. Ne volim kada filmovi koriste \"Deus ex machina\" jer to često deluje veštački i neubedljivo."
+       "- Verovanje u više božanstava karakteristično je za drevne civilizacije.\n",
+       "- U starogrčkim tragedijama često se pojavljuje božanska intervencija kao ključni element zapleta."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -159,11 +164,11 @@
     {
      "data": {
       "text/html": [
-       "The word \"se dešavalo\" in this sentence means \"was happening.\" It is a reflexive verb form in Serbian, indicating that the action is happening to the subject itself. In this context, it refers to events or incidents unfolding, and the speaker finds them very interesting.\n",
+       "In this sentence, \"se dešavalo\" means \"was happening.\" It is a reflexive verb form in Serbian, indicating an action that is happening to the subject itself. In this context, it refers to events or situations that were occurring. The verb \"dešavati se\" is commonly used in Serbian to describe ongoing or past actions or events.\n",
        "\n",
        "Example sentences in Serbian:\n",
-       "- Juče se dešavalo nešto čudno na ulici.\n",
-       "- Tokom putovanja, mnogo toga se dešavalo što me je iznenadilo."
+       "- Juče se dešavalo nešto čudno u komšiluku.\n",
+       "- Kada se dešava nešto važno, obično budem obavešten/a."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -191,10 +196,11 @@
     "import importlib\n",
     "from IPython.display import display, HTML\n",
     "import lexiflux.language.llm\n",
+    "import lexiflux.language.sentence_extractor_llm\n",
     "\n",
     "importlib.reload(lexiflux.language.llm)\n",
     "importlib.reload(lexiflux.language.sentence_extractor_llm)\n",
-    "from lexiflux.language.llm import Llm, remove_marks\n",
+    "from lexiflux.language.llm import Llm\n",
     "\n",
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
@@ -240,17 +246,14 @@
     "]\n",
     "\n",
     "article_name = \"Explain\"\n",
-    "templates = llm._articles_templates[article_name]\n",
     "model_name = \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"\n",
-    "model = llm._get_or_create_model(\n",
-    "    article_name, data[\"text_language\"], data[\"user_language\"], model_name\n",
-    ")\n",
     "\n",
     "for case in cases:\n",
     "    data = case.copy()\n",
-    "    \n",
-    "    chain = templates[\"template\"] | model | templates[\"parser\"]\n",
-    "    article = chain.invoke(data)\n",
+    "    data[\"model\"] = model_name\n",
+    "    model = llm._get_or_create_model(data)\n",
+    "    pipeline = llm._article_pipelines_factory[article_name](model)\n",
+    "    article = pipeline.invoke(data)\n",
     "    \n",
     "    display(HTML(article))\n",
     "    print(\"*\"*50)\n",
