added openAI model 4o mini added vertical scrollbar to lexical panels

--- a/experiments/lexical_articles.ipynb
+++ b/experiments/lexical_articles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['dall-e-3', 'whisper-1', 'tts-1', 'dall-e-2', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-turbo', 'gpt-4-0613', 'gpt-4o-2024-05-13', 'gpt-4-0125-preview', 'gpt-4', 'text-embedding-3-small', 'gpt-4-turbo-preview', 'text-embedding-3-large', 'gpt-3.5-turbo-16k', 'babbage-002', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'gpt-4-1106-preview', 'gpt-3.5-turbo-1106', 'text-embedding-ada-002', 'davinci-002', 'gpt-4o']\n"
+      "API key is valid. Available models: ['dall-e-3', 'whisper-1', 'gpt-4-turbo-2024-04-09', 'gpt-4-1106-preview', 'dall-e-2', 'gpt-4o-mini-2024-07-18', 'gpt-4-turbo', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4o-mini', 'gpt-4-turbo-preview', 'babbage-002', 'gpt-4-0125-preview', 'gpt-4o-2024-05-13', 'text-embedding-3-small', 'text-embedding-3-large', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'text-embedding-ada-002', 'gpt-3.5-turbo-16k', 'davinci-002', 'gpt-3.5-turbo-0125', 'gpt-3.5-turbo-1106', 'tts-1', 'gpt-4-0613', 'gpt-4o', 'gpt-4']\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "sys.path.append(project_root)\n",
-    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', '..core.settings')\n",
+    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings')\n",
     "django.setup()\n"
    ]
   },
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
