https://github.com/andgineer/lexiflux/issues/17 removed core app

--- a/experiments/lexical_articles.ipynb
+++ b/experiments/lexical_articles.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "sys.path.append(project_root)\n",
-    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings')\n",
+    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'lexiflux.settings')\n",
     "django.setup()\n"
    ]
   },
