https://github.com/andgineer/lexiflux/issues/72 fixed jupyter notebook

--- a/experiments/lexical_articles.ipynb
+++ b/experiments/lexical_articles.ipynb
@@ -3,24 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
+   "id": "5366dc97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['dall-e-3', 'whisper-1', 'gpt-4-turbo-2024-04-09', 'gpt-4-1106-preview', 'dall-e-2', 'gpt-4o-mini-2024-07-18', 'gpt-4-turbo', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4o-mini', 'gpt-4-turbo-preview', 'babbage-002', 'gpt-4-0125-preview', 'gpt-4o-2024-05-13', 'text-embedding-3-small', 'text-embedding-3-large', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'text-embedding-ada-002', 'gpt-3.5-turbo-16k', 'davinci-002', 'gpt-3.5-turbo-0125', 'gpt-3.5-turbo-1106', 'tts-1', 'gpt-4-0613', 'gpt-4o', 'gpt-4']\n"
+      "Lexiflux 1.8.0 is ready.\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import sys\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "PWD = os.getenv(\"PWD\")\n",
+    "os.chdir(PWD)\n",
+    "sys.path.insert(0, os.getenv(\"PWD\"))\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"lexiflux.settings\")\n",
+    "os.environ[\"DJANGO_ALLOW_ASYNC_UNSAFE\"] = \"true\"\n",
+    "import django\n",
+    "\n",
+    "django.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4594a37f-3aaf-459b-b31c-502a4f44ac78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: GET https://api.openai.com/v1/models \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key is valid. Available models: ['dall-e-3', 'gpt-4o-mini', 'text-embedding-3-large', 'text-embedding-3-small', 'gpt-4-0125-preview', 'text-embedding-ada-002', 'dall-e-2', 'tts-1', 'tts-1-hd-1106', 'tts-1-1106', 'tts-1-hd', 'gpt-4', 'babbage-002', 'gpt-4-turbo-preview', 'gpt-4o-2024-08-06', 'gpt-3.5-turbo', 'gpt-4o', 'gpt-3.5-turbo-1106', 'whisper-1', 'gpt-3.5-turbo-16k', 'gpt-3.5-turbo-instruct-0914', 'gpt-3.5-turbo-0125', 'gpt-4-0613', 'gpt-3.5-turbo-instruct', 'gpt-4-1106-preview', 'chatgpt-4o-latest', 'gpt-4-turbo-2024-04-09', 'davinci-002', 'gpt-4-turbo', 'gpt-4o-2024-05-13', 'gpt-4o-mini-2024-07-18']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_anthropic import ChatAnthropic\n",
     "import openai\n",
     "import django\n",
     "\n",
@@ -34,43 +66,37 @@
     "except openai.error.AuthenticationError as e:\n",
     "    print(\"API key is invalid:\", str(e))\n",
     "\n",
-    "openai_llm = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=os.getenv(\"OPENAI_API_KEY\"))  # gpt-4-turbo - more correct grammar info\n",
+    "openai_llm = ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo\", api_key=os.getenv(\"OPENAI_API_KEY\")\n",
+    ")  # gpt-4-turbo - more correct grammar info\n",
     "\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "sys.path.append(project_root)\n",
-    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'lexiflux.settings')\n",
-    "django.setup()\n"
+    "# project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "# sys.path.append(project_root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "db89eff5-e02d-467c-9f37-8906da6bf007",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def llama3_request(prompt):\n",
-    "    # This function should interact with your local Llama3 model.\n",
-    "    # Replace the below code with actual API or command-line interaction.\n",
-    "    import subprocess\n",
-    "    result = subprocess.run(['ollama', 'run', 'llama3', '--prompt', prompt], capture_output=True, text=True)\n",
-    "    return result.stdout\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "Reč \"list\" u ovom kontekstu se odnosi na tanku ravnu površinu koja je obično deo drveta ili papira. U ovom slučaju, reč \"list\" se koristi kako bi se opisala površina drveta ili papira koja je pala na zemlju ili bila na stolu. U srpskom jeziku, reč \"list\" može imati različita značenja u zavisnosti od konteksta, kao što su deo drveta, deo papira ili nešto što je tanko i ravno.\n",
+       "В данном контексте выделенное слово обозначает плоский объект, который обычно имеет форму и размер, позволяющий его использовать для записи или отображения информации. В первом предложении речь идет о природном элементе, который опадает с дерева, а во втором – о материале, на котором написаны важные заметки. \n",
        "\n",
-       "Examples:\n",
-       "- Našla sam suv list na stazi u šumi.\n",
-       "- Na stolu je bio list sa receptom za kolače."
+       "Такое использование слова может подразумевать как физический объект, так и метафорическое значение, связанное с информацией или идеями. В сербском языке слово может использоваться в различных контекстах, например, в значении \"страница\" или \"документ\". В этом случае оно указывает на важность содержания, которое записано на данном материале.\n",
+       "\n",
+       "Культурно важно отметить, что в сербском языке акцент на записанных заметках может указывать на значимость информации, особенно в учебной или рабочей среде. Это отличается от более общего использования слова в других контекстах, где акцент может быть на самом объекте, а не на его содержании. \n",
+       "\n",
+       "В русском языке аналогом может быть слово \"лист\", которое также используется в обоих значениях, но в данном контексте акцент на важности записей делает использование в сербском языке более специфичным."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -88,13 +114,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "In this sentence, the word \"list\" refers to a sheet of paper. It is used as a noun and indicates a physical piece of paper. In this context, \"list\" specifically refers to a sheet of paper with important notes written on it.\n",
+       "In this context, the highlighted term refers to a flat, thin piece of material that can be either a part of a tree or a sheet of paper. The first usage implies a natural element, specifically a part of a tree that has fallen to the ground, which is a common occurrence in nature, especially during autumn. The second usage denotes a man-made item, specifically a sheet of paper that contains important notes.\n",
        "\n",
-       "Example sentences in Serbian:\n",
-       "- Na stolu je bio list sa pesmama koje je napisala.\n",
-       "- Molim te, donesi mi list sa informacijama o tom događaju."
+       "The cultural aspect here is that the word can represent both nature and human creation, reflecting the duality of life—how we interact with the natural world and how we create and document our thoughts and ideas. This duality is common in many languages, but in this case, it highlights how one word can encompass both organic and synthetic meanings.\n",
+       "\n",
+       "While the word can mean \"leaf\" in English when referring to a part of a plant, it can also mean \"sheet\" when discussing paper. This text fragment illustrates both meanings, showing how context can change the interpretation of the same word."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -112,15 +145,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "In this sentence, the word \"intima pande\" is used to convey the idea of revealing or disclosing intimate or private matters. It is used as a command or request to share personal information or secrets. \n",
+       "In this context, the phrase refers to the act of revealing or disclosing something intimate or personal. The usage here suggests a deeper level of sharing, possibly involving sensitive or private information. \n",
        "\n",
-       "This phrase is in Latin and is used in a poetic context, often found in classical literature. It is not a common everyday expression but rather a formal and literary way of asking someone to open up about personal or confidential topics.\n",
+       "Culturally, this phrase might be associated with trust and vulnerability, indicating a relationship where one feels safe enough to open up to another person, such as a doctor or a patron. It emphasizes the importance of confidentiality and understanding in such relationships.\n",
        "\n",
-       "Example sentences in Serbian:\n",
-       "- Molim te, podeli sa mnom svoje najintimnije misli.\n",
-       "- Otkrij mi svoje tajne, neka intima pande."
+       "This phrase might differ from other common uses of similar expressions, which could simply mean to share information without the same emotional or personal depth. In English, a close equivalent could be \"to lay bare\" or \"to bare one's soul,\" which also conveys a sense of openness and intimacy in sharing one's thoughts or feelings."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -138,13 +176,22 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "In this sentence, the word \"Deus\" refers to a god or deity. It is used in the context of \"Deus ex machina,\" a Latin phrase that translates to \"god from the machine.\" This phrase is often used to describe a plot device where a seemingly unsolvable problem is suddenly and abruptly resolved by an unexpected intervention. It is a literary or theatrical technique where a god or some external force is introduced to resolve the conflict in a story.\n",
+       "The phrase you are looking at refers to a narrative device where an unexpected power or event suddenly resolves a seemingly unsolvable problem in a story. In this context, it signifies a situation where a character or event appears out of nowhere to provide a solution, often in a way that feels contrived or artificial. \n",
        "\n",
-       "Example sentences in Serbian:\n",
-       "- Verovanje u više božanstava karakteristično je za drevne civilizacije.\n",
-       "- U starogrčkim tragedijama često se pojavljuje božanska intervencija kao ključni element zapleta."
+       "This expression has roots in ancient Greek theater, where a god would be lowered onto the stage using a machine to resolve conflicts, hence the term. It carries a somewhat critical connotation, suggesting that the resolution lacks authenticity or depth, as it does not arise naturally from the plot or character development.\n",
+       "\n",
+       "In Serbian culture, this concept is also recognized and can be used to critique storytelling, especially in literature and film, where such a resolution might feel unsatisfactory to the audience. \n",
+       "\n",
+       "While the phrase itself is borrowed directly from Latin and used in various languages, including English, its usage in Serbian contexts might emphasize the disconnect between the resolution and the narrative's internal logic more than in casual English conversations."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -162,13 +209,22 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "In this sentence, \"se dešavalo\" means \"was happening.\" It is a reflexive verb form in Serbian, indicating an action that is happening to the subject itself. In this context, it refers to events or situations that were occurring. The verb \"dešavati se\" is commonly used in Serbian to describe ongoing or past actions or events.\n",
+       "In this context, the highlighted phrase refers to events or occurrences that are happening or have happened. It suggests a sense of ongoing action or a series of incidents that are noteworthy or unusual. \n",
        "\n",
-       "Example sentences in Serbian:\n",
-       "- Juče se dešavalo nešto čudno u komšiluku.\n",
-       "- Kada se dešava nešto važno, obično budem obavešten/a."
+       "The phrase conveys a feeling of curiosity or intrigue regarding these events, indicating that they caught the speaker's attention and seemed significant or engaging. This usage reflects a common way in Serbian to describe situations or happenings that are unfolding, often with a hint of surprise or interest.\n",
+       "\n",
+       "Culturally, this expression can be used in various contexts, such as discussing news, personal experiences, or observations. It emphasizes the speaker's engagement with the events, suggesting they are not just passive observers but are actively reflecting on what is occurring.\n",
+       "\n",
+       "This usage may differ from more general expressions of \"happening\" or \"occurring\" in English, as it often carries an implication of importance or interest, rather than simply stating that something is taking place."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -190,9 +246,9 @@
     "import os\n",
     "import os.path\n",
     "import sys\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
-    "import types\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
+    "\n",
     "import importlib\n",
     "from IPython.display import display, HTML\n",
     "import lexiflux.language.llm\n",
@@ -201,6 +257,8 @@
     "importlib.reload(lexiflux.language.llm)\n",
     "importlib.reload(lexiflux.language.sentence_extractor_llm)\n",
     "from lexiflux.language.llm import Llm\n",
+    "from lexiflux.decorators import get_default_user\n",
+    "\n",
     "\n",
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
@@ -214,71 +272,53 @@
     "\n",
     "cases = [\n",
     "    {\n",
-    "    \"text\": 'pokreće sve. ||[HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama||. Ljubav je najlepša',\n",
-    "    \"text_language\": \"Serbian\",\n",
-    "    \"detected_language\": \"Serbian\",\n",
-    "    \"user_language\": \"Russian\",\n",
+    "        \"text\": \"pokreće sve. ||[HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama||. Ljubav je najlepša\",\n",
+    "        \"text_language\": \"Serbian\",\n",
+    "        \"detected_language\": \"Serbian\",\n",
+    "        \"user_language\": \"Russian\",\n",
     "    },\n",
     "    {\n",
-    "    \"text\": 'pokreće sve. ||[HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama||. Ljubav je najlepša',\n",
-    "    \"text_language\": \"Serbian\",\n",
-    "    \"detected_language\": \"Serbian\",\n",
-    "    \"user_language\": \"English\",\n",
+    "        \"text\": \"pokreće sve. ||[HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama||. Ljubav je najlepša\",\n",
+    "        \"text_language\": \"Serbian\",\n",
+    "        \"detected_language\": \"Serbian\",\n",
+    "        \"user_language\": \"English\",\n",
     "    },\n",
     "    {\n",
-    "    \"text\": '||Abbati, medico, patronoque [HIGHLIGHT]intima pande[/HIGHLIGHT]||.',\n",
-    "    \"text_language\": \"Serbian\",\n",
-    "    \"detected_language\": \"Latin\",\n",
-    "    \"user_language\": \"English\",\n",
+    "        \"text\": \"||Abbati, medico, patronoque [HIGHLIGHT]intima pande[/HIGHLIGHT]||.\",\n",
+    "        \"text_language\": \"Serbian\",\n",
+    "        \"detected_language\": \"Latin\",\n",
+    "        \"user_language\": \"English\",\n",
     "    },\n",
     "    {\n",
-    "    \"text\" : '||[HIGHLIGHT]Deus[/HIGHLIGHT] ex machina||.',\n",
-    "    \"text_language\": \"Serbian\",\n",
-    "    \"detected_language\": \"Latin\",\n",
-    "    \"user_language\": \"English\",\n",
+    "        \"text\": \"||[HIGHLIGHT]Deus[/HIGHLIGHT] ex machina||.\",\n",
+    "        \"text_language\": \"Serbian\",\n",
+    "        \"detected_language\": \"Latin\",\n",
+    "        \"user_language\": \"English\",\n",
     "    },\n",
     "    {\n",
-    "    \"text\" : 'na brzinu sam uradio jutarnju gimnastiku i obukao se. ||To što [HIGHLIGHT]se dešavalo[/HIGHLIGHT] delovalo mi je krajnje interesantno||. Telefonski fonogram',\n",
-    "    \"text_language\": \"Serbian\",\n",
-    "    \"detected_language\": \"Serbian\",\n",
-    "    \"user_language\": \"English\",\n",
+    "        \"text\": \"na brzinu sam uradio jutarnju gimnastiku i obukao se. ||To što [HIGHLIGHT]se dešavalo[/HIGHLIGHT] delovalo mi je krajnje interesantno||. Telefonski fonogram\",\n",
+    "        \"text_language\": \"Serbian\",\n",
+    "        \"detected_language\": \"Serbian\",\n",
+    "        \"user_language\": \"English\",\n",
     "    },\n",
     "]\n",
     "\n",
     "article_name = \"Explain\"\n",
-    "model_name = \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"\n",
+    "model_name = \"gpt-4o-mini\"  # \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"\n",
+    "\n",
+    "user = get_default_user()\n",
     "\n",
     "for case in cases:\n",
     "    data = case.copy()\n",
     "    data[\"model\"] = model_name\n",
+    "    data[\"user\"] = user\n",
     "    model = llm._get_or_create_model(data)\n",
     "    pipeline = llm._article_pipelines_factory[article_name](model)\n",
     "    article = pipeline.invoke(data)\n",
-    "    \n",
+    "\n",
     "    display(HTML(article))\n",
-    "    print(\"*\"*50)\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "ffcd8a80-9930-4157-bd89-c840c7007e89",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Deus'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "remove_marks(\"[HIGHLIGHT]Deus[/HIGHLIGHT]\")"
+    "    print(\"*\" * 50)\n",
+    "    print()"
    ]
   },
   {
